--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,22 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   carousel_slider: ^4.0.0
+  easy_localization: ^3.0.0
+  flushbar: ^1.10.4
+  location: any
+  flutter_facebook_login: ^3.0.0
+  google_sign_in: ^4.5.6
+  flutter_html: ^1.2.0
+  geocoder: ^0.2.1
+  geolocator: any
+
+
+  provider: ^5.0.0
+  flutter_secure_storage: ^4.1.0
+  cached_network_image: ^2.2.0+1
+  flutter_spinkit: "^4.1.2"
+
+  url_launcher: ^6.0.7
 
 dev_dependencies:
   flutter_test:
@@ -51,6 +67,11 @@ flutter:
   assets:
    - assets/
 
+
+  fonts:
+    - family: default
+      fonts:
+        - asset: assets/fonts/Cairo-SemiBold.ttf
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
 
